# pywriter_monad

./: README.md  pyproject.toml  setup.cfg
.github/workflows/: python-package.yml
tests/: test_dictwriter.py  test_pywriter_monad.py
writer/: VERSION.pyi  __init__.py  __init__.pyi  dictwriter.py  writer.py  writer.pyi
