[tool.poetry]
name = "pywriter_monad"
version = "0.1.0"
description = ""
authors = ["Yohei Tamura <tamuhey@gmail.com>"]
packages = [
    {include = "writer"}
]

[tool.poetry.dependencies]
python = "^3.8"
typing-extensions = "^3.7.4"
toolz = "^0.10.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
black = "^19.10b0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
