[build-system]
requires = [ "poetry>=0.12",]
build-backend = "poetry.masonry.api"

[tool.poetry]
name = "pywriter_monad"
version = "0.3.0"
description = ""
authors = [ "Yohei Tamura <tamuhey@gmail.com>",]
[[tool.poetry.packages]]
include = "writer"

[tool.versionup]
files = [ "writer/VERSION.py",]
commit = true
tag = true

[tool.poetry.dependencies]
python = ">=3.6"

[tool.poetry.dev-dependencies]
pytest = "^6.2"
black = "^19.10b0"
mypy = "^0.782"

[tool.poetry.dependencies.typing-extensions]
version = "^3.7.4"
python = "<3.8"

[tool.poetry.dependencies.dataclasses]
version = ">=0.6"
python = "<3.7"
